@@ -10881,4 +10881,6 @@
 	  device (2015-08-24).
 	* networking:  Correct return value from psock_tcp_accept().  From
 	  SaeHie Park (2015-08-25).
+	* drivers/rwbuffer.c: Fix some logic errors.  From Dmitry Nikolaev
+	  via Juha Niskanen (2015-08-26).
 
